# m4l-builder

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPING.md  FINDINGS.md  README.md  mkdocs.yml  pyproject.toml
.claude/: skill-commands.json  skill-manifest.json
.claude/skills/: README.md  backlog.md  codex.md  cortex-consolidate.md  cortex-discover.md  cortex-init.md  cortex-learn.md  cortex-sync.md  cortex-update.md  cortex.md  creative.md  done.md  humanize.md  phren-consolidate.md  phren-discover.md  phren-init.md  phren-learn.md  phren-sync.md  phren-update.md  phren.md  pipeline.md  publish.md  release.md  swarm.md  test.md  verify.md
.github/: dependabot.yml
.github/workflows/: docs.yml  tests.yml
docs/: _widget_hardening_specs.json  ableton_ui_90_day_sprint.md  ableton_ui_baseline_audit.md  ableton_ui_construction_internals.md  ableton_ui_playbook.md  ableton_ui_scoreboard.md  ableton_ui_teardown_auto_filter.md  ableton_ui_teardown_echo.md  ableton_ui_teardown_eq_eight.md  ableton_ui_teardown_simpler.md  ableton_ui_teardown_spectrum.md  ableton_ui_teardown_template.md  ableton_ui_teardown_utility.md  ableton_ui_teardown_wavetable.md  ableton_ui_tracker.md  ableton_ui_validation_template.md  api.md  catalog.md  distortion_saturation_references.md  dual_surface_shell_guidance.md  eq_lineup.md  getting_started.md  index.md  linear_phase_eq_ui.md  livemcp_max_bridge.md  m4l_advanced_ui_techniques.md  mapping_modulation_family_notes.md  midi_tools.md  palette.md  plugin_design_doc_template.md  resources.md  reverse_engineering.md  roadmap.md  ui_goodies_and_graphics_pipeline.md  ui_inputs_reference.md  ui_premium_playbook.md
docs/archive/ui_sprint_2026_03/: README.md  ableton_ui_90_day_sprint.md  ableton_ui_baseline_audit.md  ableton_ui_construction_internals.md  ableton_ui_playbook.md  ableton_ui_reference_matrix.md  ableton_ui_review_checklist.md  ableton_ui_teardown_auto_filter.md  ableton_ui_teardown_echo.md  ableton_ui_teardown_eq_eight.md  ableton_ui_teardown_glue_compressor.md  ableton_ui_teardown_simpler.md  ableton_ui_teardown_spectrum.md  ableton_ui_teardown_utility.md  ableton_ui_teardown_wavetable.md  ableton_ui_tracker.md
docs/ui_validation/: README.md  week_00_baseline_repo_audit.md  week_03_parametric_eq.md  week_05_linear_phase_eq.md  week_07_spectrum_analyzer.md  week_09_ladder_filter.md  week_11_framework_reaudit.md
examples/: 01_gain_audio_effect.py  02_generative_midi.py  03_stereo_width.py  04_midi_transformation.py  05_euclidean_midi.py  06_simple_synth.py  README.md  _plugin_repo.py  analog_supersaw.py  auto_filter.py  comb_bank.py  convolution_reverb.py  drone_synth.py  ducking_delay.py  expression_control.py  expressive_synth.py  fdn_reverb.py  from_amxd_demo.py  gen_codebox_demo.py  glue_compressor.py  granular_looper.py  hardware_sync.py  layout_demo.py  linear_phase_eq.py  linear_phase_splitter.py  live_api_demo.py  livemcp_bridge_demo.py  lofi_processor.py  macro_randomizer.py  mc_demo.py  midi_arpeggiator.py  midi_chord.py  midi_pitch_quantize.py  midi_transpose.py  midi_velocity.py  midside_suite.py  modulation_matrix_demo.py  morphing_filter.py  morphing_lfo_demo.py  multiband_imager.py  (+25 more)
plugins/: README.md  __init__.py
plugins/ducking_delay/: README.md  __init__.py  build.py
plugins/dynamic_eq/: README.md  __init__.py
plugins/granular_sampler/: README.md  __init__.py  ui_shell_spec.md
plugins/ladder_filter/: README.md  __init__.py
plugins/linear_phase_crossover/: README.md  __init__.py  build.py
plugins/linear_phase_eq/: README.md  __init__.py  build.py
plugins/parametric_eq/: README.md  __init__.py  build.py
plugins/sidechain_eq_compressor/: README.md  __init__.py  build.py
plugins/spectrum_analyzer/: README.md  __init__.py  build.py
plugins/vocoder/: README.md  __init__.py
research/amxd_corpus/: JEWELS_CROSSREF.md  JEWELS_SYNTHESIS.md  STUDY_SYNTHESIS.md  building_tools_analysis.json  building_tools_manifest.json  building_tools_report.md
scripts/: mac_mouse.py
src/m4l_builder/: __init__.py  _corpus_aggregate.py  _corpus_dossier.py  _corpus_file.py  _corpus_helpers.py  _corpus_mapping.py  _corpus_markdown.py  _corpus_ranking.py  _exports.py  _reverse_codegen.py  _reverse_constants.py  _reverse_detect.py  _reverse_extract.py  _reverse_helpers.py  _reverse_legacy.py  _reverse_match.py  amxd.py  analysis.py  analysis_api.py  assets.py  authoring.py  box_lint.py  bridge.py  bridge_api.py  bridge_probe.py  clone.py  constants.py  container.py  controller_shells.py  corpus_analysis.py  corpus_fixture.py  device.py  device_widgets.py  dsp.py  eq_shells.py  freeze.py  gen_character.py  gen_lint.py  gen_patcher.py  gen_sim.py  (+38 more)
src/m4l_builder/dsp/: data.py  (+13 more)
tests/: conftest.py  js_harness.py  test_amxd_roundtrip.py  test_arc_knob_cluster.py  test_architecture.py  test_beat_phase_gate.py  test_box_lint.py  test_bridge_probe.py  test_buffer_viz.py  test_build_smoke.py  test_component_rack.py  test_container.py  test_corpus_analysis.py  test_corpus_fixture.py  test_curve_editor.py  test_custom_slider.py  test_custom_stepper.py  test_custom_xy_pad.py  test_delaytrail_it67.py  test_device.py  test_drag_curve_node.py  test_draggable_value_readout.py  test_dsp.py  test_engines.py  test_envelope_editor.py  test_eq_shells.py  test_eqcurve_it67.py  test_examples.py  test_freeze.py  test_gen_character.py  test_gen_lint.py  test_gen_patcher.py  test_gen_sim.py  test_gen_snippets.py  test_gen_stateful.py  test_generative.py  test_guidelines.py  test_idioms.py  test_interaction_core.py  test_interaction_lint.py  (+33 more)
tmp/: eq_verify_tone.wav.asd  peq_test_100hz.wav.asd
tmp/live_phase_test/: multitone_null.wav.asd  sub_50.wav.asd
tools/: README.md  build_catalog.py  build_corpus_comparison_report.py  build_corpus_fixture.py  build_family_report.py  build_mapping_lane_report.py  build_mapping_product_brief.py  build_mapping_product_briefs.py  build_palette.py  build_reference_dossiers.py  build_source_lane_report.py  live_visual_harness.py  mine_amxd_corpus.py
tools/maxdiff/: README.md
(+77 files in other folders)
