[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m4l-builder"
version = "0.3.0"
description = "Programmatically build Max for Live (.amxd) devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ala Arab", email = "ala@alaarab.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/alaarab/m4l-builder"
Repository = "https://github.com/alaarab/m4l-builder"
