[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m4l-builder"
version = "0.7.0"
description = "Programmatically build Max for Live (.amxd) devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ala Arab", email = "ala@alaarab.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/alaarab/m4l-builder"
Repository = "https://github.com/alaarab/m4l-builder"

[tool.hatch.build]
exclude = ["CLAUDE.md", ".claude/", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src/m4l_builder"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.19,<2",  # mypy 2.x dropped Python 3.9 support; project targets 3.9+
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["m4l_builder"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E501 (line length) is deferred: the codebase has many long generated DSP/JS
# string literals. UP031 (printf -> str.format) is deferred too -- the rewrites
# are behavior-sensitive (%-with-tuple semantics) and not worth the risk here.
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E501", "UP031"]

[tool.ruff.lint.per-file-ignores]
# Facade modules deliberately re-export names to form the public API surface;
# the unused-import / star-import warnings there are intentional.
"src/m4l_builder/authoring.py" = ["F401", "F403"]
"src/m4l_builder/bridge.py" = ["F401", "F403"]
"src/m4l_builder/reverse.py" = ["F401", "F403"]
"src/m4l_builder/analysis.py" = ["F401", "F403"]
"src/m4l_builder/live.py" = ["F401", "F403"]
"src/m4l_builder/reverse_api.py" = ["F401"]
"src/m4l_builder/analysis_api.py" = ["F401"]
"src/m4l_builder/bridge_api.py" = ["F401"]
# Single-letter loop / unpack vars (e.g. `l`) are idiomatic in the test suite.
"tests/**" = ["E741"]

[tool.mypy]
python_version = "3.9"
files = ["src/m4l_builder"]
ignore_missing_imports = true
# Lenient baseline so CI is green today; tighten module-by-module later.
implicit_optional = true

# Modules with a pre-existing type-checking backlog. They are excluded from the
# gate for now and cleaned up incrementally -- shrink this list as each module
# is annotated. New modules are checked by default.
[[tool.mypy.overrides]]
module = [
    "m4l_builder._reverse_legacy",
    "m4l_builder.corpus_fixture",
    "m4l_builder.corpus_analysis",
    "m4l_builder.theme",
    "m4l_builder.livemcp_bridge",
    "m4l_builder.device",
    "m4l_builder.ui",
    "m4l_builder.ui_registry",
    "m4l_builder.dsp",
    "m4l_builder.modules",
    "m4l_builder.live_api",
]
ignore_errors = true
